cmake_minimum_required(VERSION 3.22)
project(FH_A01)

set(CMAKE_CXX_STANDARD 17)

add_executable(FH_A01 main.cpp Common.h Solutions/Solution0146.h Solutions/Solution0001.h test.cpp Solutions/Solution0035.h Solutions/Solution0135.h Solutions/Solution0079.h Solutions/Solution0063.h Solutions/Solution0767.h Solutions/Solution1512.h Solutions/Solution2269.h Solutions/Solution1005.h Solutions/Solution0222.h Solutions/Solution2080.h Solutions/Solution2104.h Solutions/Solution0003.h)
